[project]
name = "grid-cli"
version = "0.1.0"
description = "Grid-Cell Neighborhoods: Count cells within Manhattan distance of positive values"
authors = [
    { name = "Nathan Johnson", email = "6857803+njohnson619@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/grid_cli"]
