[project]
name = "grid-neighbors"
version = "0.1.0"
description = "Count number of cells within specified distance to positive number"
authors = [
    { name = "Nathan Johnson", email = "6857803+njohnson619@users.noreply.github.com" }
]
dependencies = [
]
requires-python = ">= 3.10"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest",
    "pytest-mock",
    # for pycharm
    "setuptools",
]

[tool.rye.scripts]
"tree" = "tree --gitignore .gitignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-s"
xfail_strict = true
#asyncio_mode = "auto"
filterwarnings = [
    "error"
]
minversion="6.0"
log_level="DEBUG"
